--- a/src/App.module.css
+++ b/src/App.module.css
@@ -6,6 +6,8 @@ body {
 .container{
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    align-items: center;
     margin-top: 80px;
 }
 
