--- a/src/components/UI/UsersBox.module.css
+++ b/src/components/UI/UsersBox.module.css
@@ -1,4 +1,4 @@
-.card_form{
+.users_box {
     border-radius: 5px;
     background-color: whitesmoke;
     color: black;
@@ -6,4 +6,5 @@
     height: auto;
     display: flex;
     flex-direction: column;
+    margin-top: 30px;
 }
