--- a/src/components/Modals/Modal.module.css
+++ b/src/components/Modals/Modal.module.css
@@ -13,21 +13,49 @@ z-index: 0;
 
 .modal{
     position: fixed;
-    border: 1px solid gray;
-    height: 150px;
-    width: 200px;
-    top: 60%;
-    left: 60%;
+    height: 200px;
+    width: 70vh;
+    top: 65%;
+    left: 50%;
     background-color: white;
-    border-radius: 5px;
+    border-radius: 10px;
     z-index: 10;
 }
 
 .modal_head{
-    background-color: blue;
+    background-color: indigo;
     height: 50px;
+    margin: 0px;
+    border-radius: 10px 10px 0px 0px;
+    border: none;
+}
+.modal_head h2{
+    margin: 0px;
+    padding-top: 10px;
+    padding-left: 10px;
+    color: white;
 }
 
 .modal_body{
-background-color: whitesmoke;
+    font-size: 16px;
+    font-weight: 550;
+    padding-left: 10px;
+    margin-top: 30px;
+    margin-bottom: 50px;
+    
 }
+
+.modal_button{
+    margin-right: 10px;
+    text-decoration: none;
+    padding: 8px 20px 8px 20px;
+    font-size: 15px;
+    font-weight: 500;
+    color: white;
+    background-color:indigo;
+
+    outline: inherit;
+    border: none;
+}
+
+
