--- a/src/components/UserForm/UserForm.module.css
+++ b/src/components/UserForm/UserForm.module.css
@@ -5,6 +5,30 @@
     margin-bottom: 10px;
 }
 
+.form_input_div label {
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.form_input_div button {
+    text-decoration: none;
+    margin-top: 5px;
+    margin-bottom: 10px;
+    padding: 8px 20px 8px 20px;
+    font-size: 15px;
+    font-weight: 500;
+    color: white;
+    background-color:indigo;
+
+    outline: inherit;
+    border: none;
+
+}
+
 .form_input{
     width:100%;
+    border: 1px solid;
+    border-color: rgba(0,0,0,0.2);
+    height: 25px;
+    margin-top: 5px;
 }
